pgsql-asn1oid (1.1) UNRELEASED; urgency=medium

  * Import Debian patches into a new upstream version.

 -- Christoph Berg <myon@debian.org>  Sun, 24 Sep 2017 10:53:24 +0200

pgsql-asn1oid (0.0.20100818-3.5) unstable; urgency=medium

  * Non-maintainer upload.
  * Add patch by Herwin Weststrate to fix crash on invalid asn1oid input,
    thanks! (Closes: 822935)

 -- Christoph Berg <myon@debian.org>  Thu, 26 Jan 2017 17:32:57 +0100

pgsql-asn1oid (0.0.20100818-3.4) unstable; urgency=medium

  * Non-maintainer upload.
  * Upload with 9.6 support.

 -- Christoph Berg <myon@debian.org>  Sat, 24 Sep 2016 22:03:41 +0200

pgsql-asn1oid (0.0.20100818-3.2) unstable; urgency=medium

  * Non-maintainer upload.
  * Upload with 9.5 support. (Closes: #810560)
  * Fix testsuite to cope with changed \set ECHO semantics,
    patch by Martin Pitt. (Closes: #777521)

 -- Christoph Berg <myon@debian.org>  Thu, 21 Jan 2016 19:47:52 +0100

pgsql-asn1oid (0.0.20100818-3.1) unstable; urgency=medium

  * Non-maintainer upload.
  * Port to use pg_buildext and move to PostgreSQL 9.4 for jessie.
    (Closes: #757392)
  * Rename binary package to postgresql-9.4-asn1oid.
  * Add regression tests.

 -- Christoph Berg <myon@debian.org>  Sun, 07 Sep 2014 16:44:53 +0200

pgsql-asn1oid (0.0.20100818-3) unstable; urgency=low

  * Update to PostgreSQL 9.3 (Closes: #731913)

 -- Simon Richter <sjr@debian.org>  Wed, 11 Dec 2013 10:35:24 +0100

pgsql-asn1oid (0.0.20100818-2) unstable; urgency=low

  * Upgrade to policy 3.9.3
  * Upgrade to PostgreSQL 9.1

 -- Simon Richter <sjr@debian.org>  Sun, 29 Jul 2012 21:19:12 +0200

pgsql-asn1oid (0.0.20100818-1) unstable; urgency=low

  * Initial release

 -- Simon Richter <sjr@debian.org>  Wed, 18 Aug 2010 17:26:27 +0200