@@ -1,0 +1,3 @@
+default_version = '1'
+comment = 'asn1oid extension'
+relocatable = true
