@@ -1,3 +1,1 @@
-\set ECHO none
-set client_min_messages = warning;
-\i asn1oid.sql
+CREATE EXTENSION asn1oid;
